--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -25,6 +25,9 @@
   border-radius: 10px;
 }
 
+.hero_2_heading_1 {
+}
+
 .hero_2_par_0 {
   background: rgba(0,0,0,0.8);
   padding-bottom: 10px;
@@ -41,6 +44,12 @@
 }
 
 /* Hero 3 style */
+
+.hero_3_heading_0 {
+  font-family: Tomorrow, sans-serif;
+  font-style: normal;
+  letter-spacing: -1px;
+}
 
 .hero_3_container0 {
   background: rgba(0,0,0,0.8);
@@ -61,6 +70,11 @@
 
 #hero_4 {
   min-height: calc(100vh - 250px);
+}
+
+.hero_4_heading_0 {
+  font-family: Tomorrow, sans-serif;
+  letter-spacing: 0px;
 }
 
 .hero_4_col_0 {
