--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,7 +4,25 @@ body {
   background-attachment: fixed;
   background-position: center;
   font-family: Barlow, sans-serif;
-  scroll-behavior: smooth;
   cursor: url(../../assets/img/mouseicon/mousepointer2.png?h=5503adbd667cdf25c4dc487191cf1400) 2 2, auto;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  color: black;
+  background-color: rgb(32,255,255);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: black;
+  color: black;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
