--- a/assets/css/Navigation-with-Button.css
+++ b/assets/css/Navigation-with-Button.css
@@ -58,6 +58,7 @@
 .navigation-clean-button .navbar-toggler {
   color: #888;
   border-color: #20ffff;
+  background: rgba(30,237,241,0.7);
 }
 
 .navigation-clean-button.navbar-dark .navbar-toggler {
@@ -98,6 +99,9 @@
 .navigation-clean-button.navbar-light .navbar-nav .nav-link:focus, .navigation-clean-button.navbar-light .navbar-nav .nav-link:hover {
   color: orange;
   background-color: transparent;
+  animation-name: glitch--font;
+  animation-duration: 3s;
+  animation-direction: normal;
 }
 
 .navigation-clean-button .navbar-nav > li > .dropdown-menu {
@@ -197,6 +201,7 @@
   padding: .5rem 1rem;
   transition: background-color 0.25s;
   font-size: inherit;
+  font-family: Tomorrow, sans-serif;
 }
 
 .navigation-clean-button .navbar-text .action-button:hover {
@@ -210,5 +215,64 @@
 
 .navigation-clean-button.navbar-dark .action-button:hover {
   background: #269d9d;
+}
+
+@keyframes glitch--font {
+  0% {
+    text-shadow: 5px 5px rgb(255,0,0);
+  }
+  1%, 4% {
+    text-shadow: 0px 0px rgb(0,0,0,1);
+  }
+  5% {
+    text-shadow: -10px -5px rgb(0,255,0);
+  }
+  6%, 9% {
+    text-shadow: 0px 0px rgb(0,0,0,1);
+  }
+  10% {
+    text-shadow: 5px -5px rgb(0,0,255);
+  }
+  11%, 19% {
+    text-shadow: 0px 0px rgb(0,0,0,1);
+  }
+  20% {
+    text-shadow: -5px 5px rgb(255,0,0);
+  }
+  21%, 29% {
+    text-shadow: 0px 0px rgb(0,0,0,1);
+  }
+  30% {
+    text-shadow: 5px 5px rgb(0,255,0);
+  }
+  31% {
+    text-shadow: 0px 0px rgb(0,0,0,1);
+  }
+}
+
+/* Side Menu Style */
+
+#side-menu {
+  background-color: rgba(0,0,0,0.8);
+}
+
+@media (max-width: 768px) {
+  .nav_link {
+    color: #51a4e4 !important;
+  }
+}
+
+@media (max-width: 768px) {
+  .nav_link_btn_span {
+    width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .nav_link_btn {
+    font-family: Tomorrow, sans-serif;
+    background-color: #51a4e4 !important;
+    color: black;
+  }
 }
 
