:lipstick: UI Update
1. Changed the position of the background image.
2. Changed the max screen width to activate side menu styling.

--- a/assets/css/Navigation-with-Button.css
+++ b/assets/css/Navigation-with-Button.css
@@ -262,7 +262,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .nav_link_btn_span {
     width: 100%;
   }
@@ -273,6 +273,13 @@
     font-family: Tomorrow, sans-serif;
     background-color: #51a4e4 !important;
     color: black;
+  }
+}
+
+@media (max-width: 768px) {
+  .close {
+    font-family: Tomorrow, sans-serif;
+    color: white;
   }
 }
 
