--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,9 @@
+/* Main Div */
+
+#main_div {
+  min-height: calc(100vh - 70px);
+}
+
 /* Hero 1 Style */
 
 #hero_1 {
@@ -102,10 +108,6 @@
 }
 
 /* Hero 5 Style */
-
-#hero_5 {
-  min-height: calc(100vh - 70px);
-}
 
 .hero_5_col_0 {
   background: rgba(0,0,0,0.8);
