--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -114,7 +114,7 @@
   letter-spacing: 0px;
 }
 
-.hero_5_col_0 {
+.hero_5_row_0 {
   background: rgba(0,0,0,0.8);
   padding-top: 15px;
   padding-bottom: 15px;
