--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -16,11 +16,32 @@
 }
 
 .hero_1_heading_0 {
-  background: rgba(0,0,0,0.65);
+  background: rgb(0,0,0);
   border-radius: 10px;
   padding-bottom: 5px;
   margin-top: 20px;
-  box-shadow: 5px 5px;
+  animation-name: hero_1_heading_0_ani;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes hero_1_heading_0_ani {
+  0% {
+    box-shadow: 5px 5px;
+  }
+  20% {
+    box-shadow: 2px 2px;
+  }
+  50% {
+    box-shadow: 3px 3px;
+  }
+  80% {
+    box-shadow: 2px 2px;
+  }
+  100% {
+    box-shadow: 5px 5px;
+  }
 }
 
 /* Hero 2 Style */
@@ -76,7 +97,6 @@
 /* Hero 4 Style */
 
 #hero_4 {
-  /*min-height: calc(100vh - 250px);*/
 }
 
 .hero_4_heading_0 {
@@ -107,9 +127,6 @@
 }
 
 #contactme_btn {
-  /*background: rgb(33,255,255);*/
-  /*color: rgb(0,0,0);*/
-  /*clip-path: polygon(92% 0, 100% 25%, 100% 100%, 8% 100%, 0 75%, 0 0);*/
 }
 
 #contactme_link, #contactme_link:hover {
