--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -150,3 +150,24 @@
   border-radius: 10px;
 }
 
+/* Hero 6 */
+
+.hero-6-container {
+  background: rgba(0,0,0,0.8);
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 10px;
+  margin-top: 70px;
+  margin-bottom: 50px;
+  color: white;
+}
+
+.hero-6-row-workholder {
+  margin-top: 5px;
+  margin-bottom: 15px;
+  border-top-style: none;
+  border-bottom-width: 1.4px;
+  border-bottom-style: solid;
+  padding-bottom: 5px;
+}
+
