📝Added Lost Empire to Work Done.

--- a/assets/css/Navigation-with-Button.css
+++ b/assets/css/Navigation-with-Button.css
@@ -205,7 +205,7 @@
 }
 
 .navigation-clean-button .navbar-text .action-button:hover {
-  background: orange;
+  background: rgb(0,243,239);
   color: black;
 }
 
