--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -202,3 +202,17 @@
   margin-right: 2.5px;
 }
 
+.demo_flag {
+  border-style: solid;
+  border-color: rgb(255,153,0);
+  border-radius: 9px;
+  margin-left: 10px;
+  font-size: 25px;
+  color: rgb(255,255,255);
+  font-weight: bold;
+  padding-top: 0px;
+  padding-right: 5px;
+  padding-left: 5px;
+  padding-bottom: 3px;
+}
+
