--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -218,6 +218,20 @@
   margin-right: 2.5px;
 }
 
+.beta_flag {
+  border-radius: 9px;
+  margin-left: 10px;
+  font-size: 25px;
+  color: rgb(255,255,255);
+  font-weight: bold;
+  padding-top: 0px;
+  padding-right: 5px;
+  padding-left: 5px;
+  padding-bottom: 3px;
+  border-style: solid;
+  border-color: rgb(33,255,255);
+}
+
 .demo_flag {
   border-style: solid;
   border-color: rgb(255,153,0);
