✨ Added new project
- Added Feeling Good Company to my projects done.
- Changed the logos for the website.
- Added a Catch for when Google cannot get the insight on certain websites.

--- a/assets/css/Navigation-with-Button.css
+++ b/assets/css/Navigation-with-Button.css
@@ -22,7 +22,7 @@
   color: rgb(255,255,255);
   font-family: Tomorrow, sans-serif;
   font-size: 30px;
-  background: url("../../assets/img/icons/blue_logo.png?h=214cc1064d8bdce5622dc244726c3af0") center / 150% no-repeat;
+  background: url("../../assets/img/icons/512.png?h=494c914e147a6321b81a389cfafdc046") center / 100% no-repeat;
   height: 50px;
   width: 110px;
 }
