--- a/assets/css/pages/index.css
+++ b/assets/css/pages/index.css
@@ -74,7 +74,7 @@
   letter-spacing: -1px;
 }
 
-.hero_3_container0 {
+.hero_3_container_0 {
   background: rgba(0,0,0,0.9);
   border-radius: 10px;
   margin-top: 70px;
@@ -82,6 +82,8 @@
   padding-top: 5px;
   padding-bottom: 20px;
   backdrop-filter: blur(5px);
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .skill-icons {
@@ -150,11 +152,11 @@
 
 .hero_5_row_0 {
   background: rgba(0,0,0,0.9);
-  padding-top: 15px;
-  padding-bottom: 15px;
   margin-bottom: 70px;
   margin-top: 70px;
   border-radius: 10px;
   backdrop-filter: blur(5px);
+  padding-bottom: 15px;
+  padding-top: 15px;
 }
 
