--- a/assets/css/global/styles.css
+++ b/assets/css/global/styles.css
@@ -1,8 +1,17 @@
 body {
-  font-family: Barlow, sans-serif;
-  cursor: url(../../../assets/img/mouseicon/mousepointer2.png?h=5503adbd667cdf25c4dc487191cf1400) 2 2, auto;
-  background: url("../../../assets/img/background/41-410604_city-sunset-4k-3440-x-1440-anime.png?h=c5416968fe02792632011474af3afa86") center / cover no-repeat fixed;
+  background: rgb(20,20,20);
 }
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+  text-transform: none;
+  letter-spacing: 3px;
+}
+
+#main-div {
+  min-height: 100vh;
+}
+
+/* Custom scroll bar */
 
 ::-webkit-scrollbar {
   width: 8px;
@@ -10,31 +19,11 @@ body {
 
 ::-webkit-scrollbar-thumb {
   color: black;
-  background-color: rgb(32,255,255);
+  background-color: rgb(255,255,255);
 }
 
 ::-webkit-scrollbar-track {
   background-color: black;
   color: black;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-/* Main Div */
-
-@media (min-width: 768px) {
-  #main-div {
-    min-height: 100vh;
-    margin-top: 56px;
-  }
-}
-
-@media (max-width: 767px) {
-  #main-div {
-    min-height: 100vh;
-    margin-top: 75px;
-  }
 }
 
